--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="top-nav__links">
           <a href="#" class="l-1">Home</a>
-          <a href="#" class="l-1">ABout</a>
+          <a href="#" class="l-1">About</a>
           <a href="#" class="l-1">Features</a>
           <a href="#" class="l-1">Contact</a>
           <a href="#" class="l-1">Resources</a>
@@ -70,11 +70,11 @@
     <header class="hero">
       <div class="center hero-container">
         <div class="hero-left">
-          <h3 class="h-1 mb-20">Join the beta team</h3>
+          <h3 class="h-1 mb-20">Join the Clannit Beta Testing Program</h3>
           <p class="p-1 max-width-557 mb-40">
-            Join our exclusive beta testing team and help shape the future of
-            [describe your product/service]. Enjoy early access to new features,
-            share your insights, and directly influence our development.
+            Be among the first to experience the future of community management
+            with Clannit! Join our beta testing program and help us build a
+            platform that better serves communities like yours.
           </p>
 
           <span class="bagde"
@@ -93,18 +93,17 @@
         <div class="main-layout__left">
           <h4 class="h-3 mb-20">What its about</h4>
           <p class="p-2 mb-10">
-            Mi tincidunt elit, id quisque ligula ac diam, amet. Vel etiam
-            suspendisse morbi eleifend faucibus eget vestibulum felis. Dictum
-            quis montes, sit sit. Tellus aliquam enim urna, etiam. Mauris
-            posuere vulputate arcu amet, vitae nisi, tellus tincidunt. At
-            feugiat sapien varius id.
+            Clannit is revolutionizing community interaction and management. Our
+            platform provides tools for effortless communication, secure access
+            control, smooth event planning, and more. By joining our beta
+            testing, you’ll play a critical role in refining these features,
+            ensuring they meet real-world needs.
           </p>
           <p class="p-2">
-            Eget quis mi enim, leo lacinia pharetra, semper. Eget in volutpat
-            mollis at volutpat lectus velit, sed auctor. Porttitor fames arcu
-            quis fusce augue enim. Quis at habitant diam at. Suscipit tristique
-            risus, at donec. In turpis vel et quam imperdiet. Ipsum molestie
-            aliquet sodales id est ac volutpat.
+            As a Clannit beta tester, your feedback will directly influence our
+            final product. Test each feature, let us know what works, and
+            suggest improvements. Whether it's new feature ideas or refining
+            existing ones, your insights are invaluable to us!
           </p>
 
           <div class="captioned-img mt-50">
