--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             platform that better serves communities like yours.
           </p>
 
-          <span class="bagde"
+          <!-- <span class="bagde"
             >To be Released on Friday 1st November 2024 !</span
-          >
+          > -->
         </div>
         <div class="hero-image-container">
           <img src="./assets/hero-1.png" alt="" />
