--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           > -->
         </div>
         <div class="hero-image-container">
-          <img src="./assets/hero-1.png" alt="" />
+          <img src="./assets/thumbnail.png" alt="" />
         </div>
       </div>
     </header>
@@ -108,82 +108,73 @@
 
           <div class="captioned-img mt-50">
             <div class="thumbnail">
-              <img src="./assets/thumbnail.png" alt="" />
+              <img src="./assets/thumbnail-1.png" alt="" />
             </div>
             <h6 class="h-4 mt-5">Image caption goes here</h6>
           </div>
 
           <!--  -->
-          <h5 class="h-5 mt-50">
-            Dolor enim eu tortor urna sed duis nulla. Aliquam vestibulum, nulla
-            odio nisl vitae. In aliquet pellentesque aenean hac vestibulum
-            turpis mi bibendum diam. Tempor integer aliquam in vitae malesuada
-            fringilla.
-          </h5>
-          <p class="p-3 mt-5">
-            Elit nisi in eleifend sed nisi. Pulvinar at orci, proin imperdiet
-            commodo consectetur convallis risus. Sed condimentum enim dignissim
-            adipiscing faucibus consequat, urna. Viverra purus et erat auctor
-            aliquam. Risus, volutpat vulputate posuere purus sit congue
-            convallis aliquet. Arcu id augue ut feugiat donec porttitor neque.
-            Mauris, neque ultricies eu vestibulum, bibendum quam lorem id. Dolor
-            lacus, eget nunc lectus in tellus, pharetra, porttitor.
+          <h4 class="h-3 mt-50">What to Expect in the Beta</h4>
+          <p class="p-3 mt-5 mb-20">
+            During the beta, you’ll experience a wide range of improvements on
+            old features and some exciting new innovations, including: 
           </p>
 
-          <blockquote class="h-6 my-40">
-            "Ipsum sit mattis nulla quam nulla. Gravida id gravida ac enim
-            mauris id. Non pellentesque congue eget consectetur turpis. Sapien,
-            dictum molestie sem tempor. Diam elit, orci, tincidunt aenean
-            tempus."
-          </blockquote>
-
-          <p class="p-3 my-40">
-            Tristique odio senectus nam posuere ornare leo metus, ultricies.
-            Blandit duis ultricies vulputate morbi feugiat cras placerat elit.
-            Aliquam tellus lorem sed ac. Montes, sed mattis pellentesque
-            suscipit accumsan. Cursus viverra aenean magna risus elementum
-            faucibus molestie pellentesque. Arcu ultricies sed mauris
-            vestibulum.
+          <div style="padding-left: 3rem">
+            <ul>
+              <li class="mb-10">
+                <p class="p-2">
+                  <b>Access Control:</b> Securely manage who enters your
+                  community spaces.
+                </p>
+              </li>
+              <li class="mb-10">
+                <p class="p-2">
+                  <b> Event Management:</b> Plan, organize, and invite others to
+                  your events. Buy event tickets and sell merchandise such as
+                  asọ ẹbí for your events also!
+                </p>
+              </li>
+              <li class="mb-10">
+                <p class="p-2">
+                  <b>Vendor Marketplace:</b> Connect with trusted local vendors.
+                </p>
+              </li>
+              <li class="mb-10">
+                <p class="p-2">
+                  <b> Digital Collections:</b> Seamlessly handle invoicing,
+                  payments, including statement of accounts, and dunning
+                  messages relating to your community.
+                </p>
+              </li>
+              <li class="mb-10">
+                <p class="p-2">
+                  <b> Community Communication:</b> Keep everyone informed and
+                  engaged in an exciting secure feed limited to you and your
+                  community members.
+                </p>
+              </li>
+            </ul>
+          </div>
+          <p class="p-2 mt-20">
+            Each feature is designed to make community life simpler, safer, and
+            more connected.
           </p>
 
           <!-- 2 -->
-          <h4 class="h-3 mt-80 mb-20">Headline 2</h4>
-          <p class="p-2">
-            Mi tincidunt elit, id quisque ligula ac diam, amet. Vel etiam
-            suspendisse morbi eleifend faucibus eget vestibulum felis. Dictum
-            quis montes, sit sit. Tellus aliquam enim urna, etiam. Mauris
-            posuere vulputate arcu amet, vitae nisi, tellus tincidunt. At
-            feugiat sapien varius id.
-          </p>
 
           <div class="captioned-img mt-50">
             <div class="thumbnail">
-              <img src="./assets/thumbnail.png" alt="" />
+              <img src="./assets/thumbnail-2.png" alt="" />
             </div>
             <h6 class="h-4 mt-5">Image caption goes here</h6>
           </div>
 
           <!-- 3 -->
-          <h4 class="h-7 mt-80 mb-20">Conclusion</h4>
-          <p class="p-2">
-            Morbi sed imperdiet in ipsum, adipiscing elit dui lectus. Tellus id
-            scelerisque est ultricies ultricies. Duis est sit sed leo nisl,
-            blandit elit sagittis. Quisque tristique consequat quam sed. Nisl at
-            scelerisque amet nulla purus habitasse.
-          </p>
-          <p class="p-3 mt-5">
-            Nunc sed faucibus bibendum feugiat sed interdum. Ipsum egestas
-            condimentum mi massa. In tincidunt pharetra consectetur sed duis
-            facilisis metus. Etiam egestas in nec sed et. Quis lobortis at sit
-            dictum eget nibh tortor commodo cursus.
-          </p>
-          <p class="p-3 mt-5">
-            Odio felis sagittis, morbi feugiat tortor vitae feugiat fusce
-            aliquet. Nam elementum urna nisi aliquet erat dolor enim. Ornare id
-            morbi eget ipsum. Aliquam senectus neque ut id eget consectetur
-            dictum. Donec posuere pharetra odio consequat scelerisque et, nunc
-            tortor. Nulla adipiscing erat a erat. Condimentum lorem posuere
-            gravida enim posuere cursus diam.
+          <h4 class="h-7 mt-50 mb-10">Ready to Join the Beta?</h4>
+          <p class="p-3">
+            During the beta, you’ll experience a wide range of improvements on
+            old features and some exciting new innovations, including: 
           </p>
         </div>
         <div class="main-layout__right">
