🌾 fix: form change

--- a/index.html
+++ b/index.html
@@ -173,23 +173,28 @@
           <!-- 3 -->
           <h4 class="h-7 mt-50 mb-10">Ready to Join the Beta?</h4>
           <p class="p-3">
-            During the beta, you’ll experience a wide range of improvements on
-            old features and some exciting new innovations, including: 
+            Sign up below to register your interest in the Clannit beta testing
+            program. Selected participants will receive exclusive early access
+            and have a direct line to our team for feedback. Help shape the
+            platform that’s redefining community experiences!
           </p>
+
+          <div class="form-container mt-50">
+            <div class="form-container__header">
+              <h4 class="h-2">Confirm Interest</h4>
+            </div>
+
+            <button class="btn btn-1 mt-30">I’m Interested</button>
+          </div>
+
         </div>
         <div class="main-layout__right">
           <div class="form-container">
             <div class="form-container__header">
-              <h4 class="h-2">Join Now</h4>
+              <h4 class="h-2">Confirm Interest</h4>
             </div>
 
-            <label for="user-email" class="input-label mt-25 mb-7">Email</label>
-            <input
-              type="text"
-              class="input-element"
-              placeholder="Falolamayowa@gmail.com"
-            />
-            <button class="btn btn-1 mt-30">Confirm Interest</button>
+            <button class="btn btn-1 mt-30">I’m Interested</button>
           </div>
         </div>
       </div>
@@ -250,7 +255,7 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <h6 class="h-8">© 2024 clannit. All rights reserved.</h6>
+          <h6 class="h-8">© 2024 Clannit. All rights reserved.</h6>
           <div class="footer-bottom__links">
             <a href="#" class="l-4">Privacy Policy</a>
             <a href="#" class="l-4">Terms of Service</a>
