🌾 fix: form change

--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
 
             <button class="btn btn-1 mt-30">I’m Interested</button>
           </div>
-
         </div>
         <div class="main-layout__right">
           <div class="form-container">
@@ -208,8 +207,9 @@
             <h4 class="h-9 mb-35">Connect with us:</h4>
             <p class="p-4 mt-10">Contact us at: support@clannit.com</p>
             <p class="p-4 mt-10">Call us: +234 9011485659</p>
-            <p class="p-4 mt-10">
-              Visit us: 14a Sasegbon Street, GRA Ikeja, Lagos, Nigeria
+            <p class="p-4 mt-10 max-width-500">
+              Visit us: 3b Badagry Street, Off Abba Johnson, Adeniyi Jones
+              Avenue, Ikeja, Lagos
             </p>
           </div>
           <div class="footer-top__links">
