🌾 fix: form change

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           > -->
         </div>
         <div class="hero-image-container">
-          <img src="./assets/thumbnail.png" alt="" />
+          <img src="./assets/thumbnail-4.png" alt="" />
         </div>
       </div>
     </header>
@@ -108,9 +108,9 @@
 
           <div class="captioned-img mt-50">
             <div class="thumbnail">
-              <img src="./assets/thumbnail-1.png" alt="" />
+              <img src="./assets/thumbnail-3.png" alt="" />
             </div>
-            <h6 class="h-4 mt-5">Image caption goes here</h6>
+            <!-- <h6 class="h-4 mt-5">Image caption goes here</h6> -->
           </div>
 
           <!--  -->
@@ -167,7 +167,7 @@
             <div class="thumbnail">
               <img src="./assets/thumbnail-2.png" alt="" />
             </div>
-            <h6 class="h-4 mt-5">Image caption goes here</h6>
+            <!-- <h6 class="h-4 mt-5">Image caption goes here</h6> -->
           </div>
 
           <!-- 3 -->
