🌾 fix: form change

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
           <div class="captioned-img mt-50">
             <div class="thumbnail">
-              <img src="./assets/thumbnail-2.png" alt="" />
+              <img src="./assets/thumbnail-5.png" alt="" />
             </div>
             <!-- <h6 class="h-4 mt-5">Image caption goes here</h6> -->
           </div>
@@ -212,7 +212,7 @@
           </div>
         </div>
         <div class="main-layout__right">
-          <div class="form-container">
+          <div class="form-container form-container__right ">
             <div class="form-container__header">
               <h4 class="h-2">Confirm Interest</h4>
             </div>
