fix: btn colors

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
       <section class="features__section">
         <div class="center">
-          <h5 class="h-13 text-center">Whats new</h5>
+          <!-- <h5 class="h-13 text-center">Whats new</h5> -->
           <h3 class="h-14 text-center">Improved Features</h3>
 
           <div class="feature_lists mt-25">
